# ios_project

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build  format  inventory.c  make_serv  parse.c  parse_open.c  project_state.md  test_shell.c  use.c  where_am_i  where_am_i.c
data/: history.txt  instructions.txt  oneliner  scenario.txt
data/manuals/: cat.txt  cd.txt  env.txt  history.txt  inventory.txt  ls.txt  rename.txt  take.txt  whereami.txt
game_directories/: NOTES_FOR_IMPROVEMENT.txt
game_directories/HOME/: home.txt
game_directories/HOME/FRIENDS_HOUSE/: friends_house.txt  knife.item
game_directories/MY_BUILDING/: my_building.txt
game_directories/MY_BUILDING/FRIENDS_HOUSE/: friends_house.txt  knife.item  run_away.txt
game_directories/inventory/: gasoline.item  lamp.item  screwdriver.item
game_directories/item_backups/: car_battery.item
game_directories/my_building/: my_building.txt
game_directories/my_building/friends_house/: friends_house.txt
game_directories/my_building/roundabout/: city_edges.txt  roundabout.txt
include/: ast.h  cd.h  defines.h  help.h  history.h  input.h  inventory.h  item.h  parse.h  parser.h  shell.h  stack.h  token.h  utils.h
manuals/: inventory.txt  ls.txt
src/: ast.c  cat.c  cd.c  help.c  history.c  input.c  inventory.c  item.c  ls.c  main.c  man.c  parse.c  parser.c  rename.c  shell.c  stack.c  takeItem.c  test_shell.c  token.c  utils.c  where_am_i.c  whereami.c
story/: .history
story/testdirs/inventory/: items  screwdriver.item
testdirs/inventory/: lamp.item
(+29 files in other folders)
